--- a/app/src/main/res/layout/item_jogador.xml
+++ b/app/src/main/res/layout/item_jogador.xml
@@ -12,14 +12,15 @@
     android:gravity="center_vertical">
 
     <!-- Ícone -->
-    <ImageView
-        android:id="@+id/image_jogador_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_user"
-        android:contentDescription="@string/jogador_icon_desc" />
 
     <!-- Dados do jogador -->
+    <ImageView
+        android:id="@+id/image_jogador_icon"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/jogador_icon_desc"
+        android:src="@drawable/ic_user" />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
