--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,6 +40,12 @@
         android:hint="@string/senha"
         android:inputType="textPassword"/>
 
+    <CheckBox
+        android:id="@+id/checkBoxAdmin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="É administrador?" />
+
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="match_parent"
