--- a/app/src/main/res/layout/activity_times.xml
+++ b/app/src/main/res/layout/activity_times.xml
@@ -25,10 +25,11 @@
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/title_times"
-            android:textSize="18sp"
+            android:text="@string/card_times_title"
+            android:textColor="@color/black"
+            android:textSize="22sp"
             android:textStyle="bold"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="10dp"/>
     </LinearLayout>
     <!-- Título da seção + botão novo time -->
     <LinearLayout
