--- a/app/src/main/res/layout/activity_classificacao.xml
+++ b/app/src/main/res/layout/activity_classificacao.xml
@@ -2,35 +2,45 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Título no topo -->
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back_button_desc"
+        android:padding="1dp"
+        android:src="@drawable/ic_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <TextView
         android:id="@+id/tvTituloClassificacao"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="16dp"
         android:text="Tabela de Classificação"
         android:textColor="@color/primary"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/back_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/back_button" />
 
-    <!-- Cabeçalho da tabela (nomes das colunas) -->
     <LinearLayout
         android:id="@+id/layoutCabecalho"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:orientation="horizontal"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:paddingBottom="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTituloClassificacao">
@@ -45,24 +55,24 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvCabJogos2"
+            android:id="@+id/tvCabPontos"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:text="P"
             android:textColor="@color/primary"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tvCabJogos"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="J"
-            android:textColor="@color/primary"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="P"/> <TextView
+        android:id="@+id/tvCabJogos"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="J"
+        android:textColor="@color/primary"
+        android:textStyle="bold"
+        tools:text="J"/>
 
         <TextView
             android:id="@+id/tvCabVitorias"
@@ -72,7 +82,8 @@
             android:gravity="center"
             android:text="V"
             android:textColor="@color/primary"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="V"/>
 
         <TextView
             android:id="@+id/tvCabEmpates"
@@ -82,7 +93,8 @@
             android:gravity="center"
             android:text="E"
             android:textColor="@color/primary"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="E"/>
 
         <TextView
             android:id="@+id/tvCabDerrotas"
@@ -92,18 +104,19 @@
             android:gravity="center"
             android:text="D"
             android:textColor="@color/primary"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="D"/>
     </LinearLayout>
 
-    <!-- RecyclerView que exibirá a lista de classificação -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvClassificacao"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/layoutCabecalho"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@+id/layoutCabecalho"
+        tools:listitem="@layout/item_classificacao" /> </androidx.constraintlayout.widget.ConstraintLayout>
