--- a/app/src/main/res/layout/activity_jogadores_partida.xml
+++ b/app/src/main/res/layout/activity_jogadores_partida.xml
@@ -18,6 +18,7 @@
         <!-- Botão “voltar” (seta para trás) -->
         <ImageButton
             android:id="@+id/button_back_jogadores"
+            android:padding="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_back"
