--- a/app/src/main/res/layout/activity_partida_form.xml
+++ b/app/src/main/res/layout/activity_partida_form.xml
@@ -16,10 +16,11 @@
 
         <ImageButton
             android:id="@+id/backButton"
+            android:padding="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_back"
-            android:background="@android:color/transparent"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/back_button_desc" />
 
         <TextView
