--- a/app/src/main/res/layout/activity_time_form.xml
+++ b/app/src/main/res/layout/activity_time_form.xml
@@ -24,9 +24,10 @@
 
             <ImageButton
                 android:id="@+id/backButton"
+                android:padding="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/back_button_desc"
                 android:src="@drawable/ic_back" />
 
